# FlymeHelper

./: .gitignore  .gitmodules  README.md  build.gradle  code.txt  gradle.properties  gradlew  local.properties  proxy.settings.xml  settings.gradle
app/: .gitignore  BUG.list  CMakeLists.txt  allatori.xml  build.gradle  build.gradle.bak  mapping.txt  proguard-rules.pro  seeds.txt  unused.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config  config.json  hosts_Flyme  hosts_google  hosts_noad  xposed_init
app/src/main/jni/: ccheck.cpp  hello.cpp
app/src/main/res/drawable/: shape.xml
app/src/main/res/drawable-xxhdpi/: btn_bg_red.xml  btn_nor_down.xml  check_border.xml  ic_block.xml  ic_circle_down.xml  ic_format_list.xml  ic_info.xml  ic_link.xml  ic_notes.xml  ic_refresh.xml  ic_settings.xml  ic_share.xml  ic_swap_horiz.xml  ic_table_rows.xml  ic_telegram.xml  ic_vip.xml  ic_vip_banner.xml  ic_vip_nav.xml  panel_background.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  alert_dialog.xml  app_info_item.xml  app_upgrade_item.xml  dialog_def.xml  dialog_disable_app.xml  dialog_input_formate_time.xml  dialog_input_qq.xml  dialog_xposed_copyurl.xml  dialog_xposed_disabled.xml  fragment_about.xml  fragment_about_me.xml  fragment_app_list.xml  fragment_app_list2.xml  fragment_app_upgrade.xml  fragment_clean.xml  fragment_core_patch.xml  fragment_hosts.xml  fragment_others.xml  fragment_settings.xml  fragment_show.xml  fragment_system_ui.xml  fragment_themepatch.xml  fragment_xposed.xml  navigation_header.xml
(+391 files in other folders)
